@@ -48,6 +48,7 @@ namespace WebCore {
     extern WTFLogChannel LogHistory;
     extern WTFLogChannel LogPageCache;
     extern WTFLogChannel LogNetwork;
+    extern WTFLogChannel LogResources;
 
     void InitializeLoggingChannelsIfNecessary();
 
